2015-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention problem with "make dist" and XS modules.

2015-11-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi: Add examples of space between macro 
	name and opening brace.

2015-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry): For multi-line entries, use a \strut 
	on first and last lines.  Comments changed or removed.
	(\insertindexentrybox): Set \lineskip to 0pt.

2015-11-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\passargtomacro): Rewrite to operate purely 
	at TeX's expansion stage.
	(\defmacro): Use \passargtomacro for macros of more than one 
	argument.
	(\macroargctxt): Change catcode of space.
	(\scanmacro): Don't call \passargtomacro because macro arguments 
	have already been processed.
	(\pdfurl, \commondummiesnofonts): Remove definition of 
	\xprocessmacroarg.

2015-11-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-text-test.texi: Add examples of spaces in macro 
	arguments, and nested macro use.

2015-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm: Change a couple of instances 
	of "environmental variable" to "environment variable."

2015-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am (do_subst): Substitute @enable_xs@ in 
	texi2any.pl as intended.

2015-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl (BEGIN): Check if top_srcdir environment 
	variable is defined.

2015-11-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Use _AC_OUTPUT_SUBDIRS macro inside a subshell.

2015-11-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Use _AC_OUTPUT_SUBDIRS macro to configure in 
	subdirectory.

2015-11-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: Handle srcdir being an absolute path for 
	building in XSParagraph subdirectory.  Used code from Autoconf's 
	_AC_SRCDIRS macro (release 2.69).
