@@ -169,6 +169,7 @@ test_files = \
  t/input_files/empty_lines_at_beginning_no_setfilename_no_element.texi \
  t/input_files/japanese_utf8.texi \
  t/input_files/japanese_shift_jis.texi \
+ t/input_files/nodequote.texi \
  t/input_files/non_break_spaces.texi \
  t/input_files/sample_utf8.texi \
  t/input_files/things_before_setfilename_no_element.texi \
